fix overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -16,7 +16,9 @@ $input-color: #656565;
     font-size: 48px;
     font-weight: 600;
 }
-
+.overflow-hidden{
+    overflow: hidden;
+}
 .headline-desktop2{
     font-size: 32px;
     font-weight: 600;
